# football-play-caller

./: .gitignore  CLAUDE.md  README.md  data_process.ipynb  demo_replay.py  eval_drives.py  eval_phases.py  formations.py  nfl_tracking.ipynb  play_motion.py  process_nfl_data.ipynb  process_nfl_data_executed.ipynb  train_adversarial.py  train_grpo.py  train_grpo_colab.ipynb
data/: label_encoders.json  model_features.json  outcome_classifier.joblib  yards_fumble_lost.json  yards_q0.10_completion.joblib  yards_q0.10_fumble_lost.joblib  yards_q0.10_normal.joblib  yards_q0.10_touchdown.joblib  yards_q0.25_completion.joblib  yards_q0.50_completion.joblib  yards_q0.50_fumble_lost.joblib  yards_q0.50_normal.joblib  yards_q0.50_touchdown.joblib  yards_q0.75_completion.joblib  yards_q0.75_interception.joblib  yards_q0.75_normal.joblib  yards_q0.75_touchdown.joblib  yards_q0.90_completion.joblib  yards_q0.90_interception.joblib  yards_q0.90_normal.joblib  yards_sack.json
football_env/: __init__.py  client.py  models.py  openenv.yaml  (+4 more)
hf_space/: Dockerfile  README.md  __init__.py  app.py  environment.py  label_encoders.json  lookup_table.json  models.py  openenv.yaml  outcome_classifier.joblib  play_outcome_model.py  pyproject.toml  requirements.txt  yards_q0.10_interception.joblib  yards_q0.25_fumble_lost.joblib  yards_q0.25_interception.joblib  yards_q0.25_normal.joblib  yards_q0.25_touchdown.joblib  yards_q0.50_interception.joblib  yards_q0.75_fumble_lost.joblib  yards_q0.90_fumble_lost.joblib  yards_q0.90_touchdown.joblib
hf_space/server/: __init__.py  app.py  environment.py
(+15 files in other folders)
